samples/_failures_safe/1761336237_12250c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1993a24c.c: In function ‘main’:
./samples/SAFE/__tmp_1993a24c.c:169:5: error: expected expression at end of input
  169 |     free_matrix(&
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_1993a24c.c:169:5: error: expected declaration or statement at end of input
